--- a/personal-portfolio/public/css/style.css
+++ b/personal-portfolio/public/css/style.css
@@ -108,12 +108,12 @@ a:focus {
     
     .wrapper .content::before,
     .wrapper .content::after {
-        position: fixed;
+        /* position: fixed;
         content: "";
         width: 100%;
         height: 30px;
         background: #F6D155;
-        z-index: 1;
+        z-index: -1; */
     }
     
     .wrapper .content::before {
